--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>Snake Game | Josiel Aponte's Personal Page</title>
     <link rel="icon" href="./src/favicon.ico" />
-    <script src="./libraries/p5.js" type="text/javascript"></script>
+    <script src="./assets/p5.js" type="text/javascript"></script>
+    <script src="./assets/p5.sound.js" type="text/javascript"></script>
     <script src="./src/game.js" type="text/javascript"></script>
     <script src="./src/snake.js" type="text/javascript"></script>
   </head>
