--- a/index.html
+++ b/index.html
@@ -2,26 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"
-    />
     <title>Snake Game | Josiel Aponte's Personal Page</title>
-    <style>
-      body {
-        margin: 10 px;
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        position: fixed;
-      }
-    </style>
     <link rel="icon" href="./assets/favicon.ico" />
+  </head>
+  <body>
     <script src="./assets/p5/p5.js" type="text/javascript"></script>
     <script src="./assets/p5/p5.sound.js" type="text/javascript"></script>
     <script src="./assets/hammer/hammer.min.js" type="text/javascript"></script>
     <script src="./src/game.js" type="text/javascript"></script>
     <script src="./src/snake.js" type="text/javascript"></script>
-  </head>
-  <body></body>
+  </body>
 </html>
